## Process this file with automake to produce Makefile.in


SUBDIRS = \
	ccframework

nobase_include_HEADERS = ccframework/ccApp.h \
	ccframework/ccCommon.h \
	ccframework/ccConfig.h \
	ccframework/ccConfigLoader.h \
	ccframework/ccController.h \
	ccframework/ccCookie.h \
	ccframework/ccEvent.h \
	ccframework/ccEventDispatcher.h \
	ccframework/ccFramework.h \
	ccframework/ccQueryParser.h \
	ccframework/ccRequest.h \
	ccframework/ccResponse.h \
	ccframework/ccRoute.h \
	ccframework/ccRouter.h \
	ccframework/ccSession.h \
	ccframework/ccTemplateResponse.h \
	ccframework/ccRole.h \
	ccframework/ccAcl.h \
	ccframework/ccResource.h \
	ccframework/ccException.h \
	ccframework/ccMultipartParser.h
