## Process this file with automake to produce Makefile.in


SUBDIRS = \
	ccframework

nobase_include_HEADERS = ccframework/ccApp.h \
	ccframework/ccArray.h \
	ccframework/ccCommon.h \
	ccframework/ccConfig.h \
	ccframework/ccConfigLoader.h \
	ccframework/ccController.h \
	ccframework/ccCookie.h \
	ccframework/ccEvent.h \
	ccframework/ccEventDispatcher.h \
	ccframework/ccFramework.h \
	ccframework/ccQueryParser.h \
	ccframework/ccRequest.h \
	ccframework/ccResponse.h \
	ccframework/ccRoute.h \
	ccframework/ccRouter.h \
	ccframework/ccSession.h \
	ccframework/ccTemplateResponse.h \
	ccframework/ccRole.h \
	ccframework/ccAcl.h \
	ccframework/ccResource.h \
	ccframework/ccException.h \
	ccframework/ccMultipartParser.h \
	ccframework/ccBaseHelper.h \
	ccframework/ccBaseForm.h \
	ccframework/ccBaseFormElement.h \
	ccframework/ccFormElementFormStart.h \
	ccframework/ccFormElementLabel.h \
	ccframework/ccFormElementText.h \
	ccframework/ctemplate/template.h \
	ccframework/ctemplate/template_cache.h \
	ccframework/ctemplate/template_string.h \
	ccframework/ctemplate/template_enums.h \
	ccframework/ctemplate/template_pathops.h \
	ccframework/ctemplate/template_modifiers.h \
	ccframework/ctemplate/template_dictionary.h \
	ccframework/ctemplate/template_dictionary_interface.h \
	ccframework/ctemplate/template_annotator.h \
	ccframework/ctemplate/template_emitter.h \
	ccframework/ctemplate/template_namelist.h \
	ccframework/ctemplate/per_expand_data.h \
	ccframework/ctemplate/str_ref.h
