## Process this file with automake to produce Makefile.in


SUBDIRS = \
	ccframework

nobase_include_HEADERS = \
    ccframework/ccApp.h \
	ccframework/ccCommon.h \
	ccframework/ccConfig.h \
	ccframework/ccConfigLoader.h \
	ccframework/ccController.h \
	ccframework/ccCookie.h \
	ccframework/ccEvent.h \
	ccframework/ccEventDispatcher.h \
	ccframework/ccFramework.h \
	ccframework/ccQueryParser.h \
	ccframework/ccRequest.h \
	ccframework/ccResponse.h \
	ccframework/ccRoute.h \
	ccframework/ccStaticRoute.h \
	ccframework/ccPregRoute.h \
	ccframework/ccRouter.h \
	ccframework/ccSession.h \
	ccframework/ccSessionProvider.h \
	ccframework/ccMemorySessionProvider.h \
	ccframework/ccYamlSessionProvider.h \
	ccframework/ccTemplateResponse.h \
	ccframework/ccRole.h \
	ccframework/ccAcl.h \
	ccframework/ccResource.h \
	ccframework/ccException.h \
	ccframework/ccMultipartParser.h \
	ccframework/ccBaseHelper.h \
	ccframework/ccComponentHelper.h \
	ccframework/ccBaseForm.h \
	ccframework/ccBaseFormElement.h \
	ccframework/ccFormElementFormStart.h \
	ccframework/ccFormElementLabel.h \
	ccframework/ccFormElementText.h \
	ccframework/ccClassDeclarations.h \
	ccframework/ctemplate/template.h \
	ccframework/ctemplate/template_cache.h \
	ccframework/ctemplate/template_string.h \
	ccframework/ctemplate/template_enums.h \
	ccframework/ctemplate/template_pathops.h \
	ccframework/ctemplate/template_modifiers.h \
	ccframework/ctemplate/template_dictionary.h \
	ccframework/ctemplate/template_dictionary_interface.h \
	ccframework/ctemplate/template_annotator.h \
	ccframework/ctemplate/template_emitter.h \
	ccframework/ctemplate/template_namelist.h \
	ccframework/ctemplate/per_expand_data.h \
	ccframework/ctemplate/str_ref.h \
ccframework/yaml-cpp/emitter.h \
ccframework/yaml-cpp/contrib/graphbuilder.h \
ccframework/yaml-cpp/contrib/anchordict.h \
ccframework/yaml-cpp/mark.h \
ccframework/yaml-cpp/node/ptr.h \
ccframework/yaml-cpp/node/type.h \
ccframework/yaml-cpp/node/detail/memory.h \
ccframework/yaml-cpp/node/detail/node_iterator.h \
ccframework/yaml-cpp/node/detail/iterator_fwd.h \
ccframework/yaml-cpp/node/detail/impl.h \
ccframework/yaml-cpp/node/detail/node_data.h \
ccframework/yaml-cpp/node/detail/node.h \
ccframework/yaml-cpp/node/detail/iterator.h \
ccframework/yaml-cpp/node/detail/bool_type.h \
ccframework/yaml-cpp/node/detail/node_ref.h \
ccframework/yaml-cpp/node/impl.h \
ccframework/yaml-cpp/node/convert.h \
ccframework/yaml-cpp/node/node.h \
ccframework/yaml-cpp/node/emit.h \
ccframework/yaml-cpp/node/parse.h \
ccframework/yaml-cpp/node/iterator.h \
ccframework/yaml-cpp/null.h \
ccframework/yaml-cpp/noncopyable.h \
ccframework/yaml-cpp/eventhandler.h \
ccframework/yaml-cpp/traits.h \
ccframework/yaml-cpp/ostream_wrapper.h \
ccframework/yaml-cpp/emitterdef.h \
ccframework/yaml-cpp/dll.h \
ccframework/yaml-cpp/parser.h \
ccframework/yaml-cpp/yaml.h \
ccframework/yaml-cpp/binary.h \
ccframework/yaml-cpp/emitfromevents.h \
ccframework/yaml-cpp/emittermanip.h \
ccframework/yaml-cpp/stlemitter.h \
ccframework/yaml-cpp/anchor.h \
ccframework/yaml-cpp/exceptions.h

